--- a/Meteo/View/Base.lproj/Main.storyboard
+++ b/Meteo/View/Base.lproj/Main.storyboard
@@ -92,20 +92,9 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="1m2-lv-gJo">
-                                <rect key="frame" x="102" y="290" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="1m2-lv-gJo">
+                                <rect key="frame" x="30" y="118" width="354" height="552"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="hOo-ZV-Rt5">
-                                        <rect key="frame" x="0.0" y="44.5" width="240" height="43.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hOo-ZV-Rt5" id="mQF-Ir-2KI">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
                             </tableView>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="e5g-Jn-c0l">
                                 <rect key="frame" x="60" y="738" width="294" height="4"/>
@@ -119,6 +108,10 @@
                             <constraint firstItem="fZq-YR-vnj" firstAttribute="leading" secondItem="l3p-X2-8qA" secondAttribute="leading" constant="60" id="6pc-5f-ujy"/>
                             <constraint firstItem="l3p-X2-8qA" firstAttribute="trailing" secondItem="zZ5-2Q-YTY" secondAttribute="trailing" constant="60" id="7aV-pS-5kV"/>
                             <constraint firstItem="l3p-X2-8qA" firstAttribute="bottom" secondItem="fZq-YR-vnj" secondAttribute="bottom" constant="100" id="7dW-ph-Uls"/>
+                            <constraint firstItem="zZ5-2Q-YTY" firstAttribute="top" secondItem="1m2-lv-gJo" secondAttribute="bottom" constant="30" id="DRA-EC-xSh"/>
+                            <constraint firstItem="1m2-lv-gJo" firstAttribute="leading" secondItem="l3p-X2-8qA" secondAttribute="leading" constant="30" id="Gqz-jZ-6u5"/>
+                            <constraint firstItem="1m2-lv-gJo" firstAttribute="top" secondItem="l3p-X2-8qA" secondAttribute="top" constant="30" id="emo-yf-uyF"/>
+                            <constraint firstItem="l3p-X2-8qA" firstAttribute="trailing" secondItem="1m2-lv-gJo" secondAttribute="trailing" constant="30" id="hJd-ED-BhI"/>
                             <constraint firstItem="l3p-X2-8qA" firstAttribute="trailing" secondItem="fZq-YR-vnj" secondAttribute="trailing" constant="60" id="nON-J9-zNy"/>
                             <constraint firstItem="e5g-Jn-c0l" firstAttribute="leading" secondItem="l3p-X2-8qA" secondAttribute="leading" constant="60" id="s4X-VB-EeF"/>
                             <constraint firstItem="l3p-X2-8qA" firstAttribute="trailing" secondItem="e5g-Jn-c0l" secondAttribute="trailing" constant="60" id="uCh-87-KT5"/>
