--- a/Meteo/View/Base.lproj/Main.storyboard
+++ b/Meteo/View/Base.lproj/Main.storyboard
@@ -84,7 +84,10 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fZq-YR-vnj">
                                 <rect key="frame" x="60" y="731" width="294" height="31"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Charger la météo à nouveau"/>
+                                <connections>
+                                    <action selector="didTapStartAgainButton" destination="y9g-yV-Rpd" eventType="touchUpInside" id="unR-cA-1Xw"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZ5-2Q-YTY">
                                 <rect key="frame" x="60" y="721" width="294" height="0.0"/>
